hello_web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-web-service
spec:
  selector:
    app: hello-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
