hello_web_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ilpetre.trade
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-web-service
            port:
              number: 80
